@@ -853,7 +853,7 @@ protected :
     afx_msg void OnHScroll (UINT nSBCode, UINT nPos, CScrollBar * pScrollBar);
     afx_msg void OnLButtonUp (UINT nFlags, CPoint point);
     afx_msg void OnMouseMove (UINT nFlags, CPoint point);
-    afx_msg void OnTimer (UINT nIDEvent);
+    afx_msg void OnTimer (UINT_PTR nIDEvent);
     afx_msg void OnKillFocus (CWnd * pNewWnd);
     afx_msg void OnLButtonDblClk (UINT nFlags, CPoint point);
     afx_msg void OnEditCopy ();
